--- a/A3/src/makefile
+++ b/A3/src/makefile
@@ -2,18 +2,19 @@ CC = g++
 CFLAGS = -Wall -std=c++11
 SRCDIR = ./src
 
+
+TrieTest : TrieTest.cpp Trie.o Node.o
+	$(CC) $(CFLAGS) -o TrieTest TrieTest.cpp Trie.o Node.o
+
 Node.o : Node.h Node.cpp
 	$(CC) $(CFLAGS) -c -o Node.o Node.cpp
 
 Trie.o : Trie.h Trie.cpp
 	$(CC) $(CFLAGS) -c -o Trie.o Trie.cpp 
 
-Main : main.cpp Trie.o Node.o
-	$(CC) $(CFLAGS) -o main main.cpp Trie.o Node.o
-
-Test : Main
-	./Main
+Test : TrieTest
+	./TrieTest test.txt test2.txt
 
 clean : 
-	rm Trie.o Node.o main
+	rm Trie.o Node.o TrieTest
 
